k8/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: paytrack
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: paytrack-backend
  template:
    metadata:
      labels:
        app: paytrack-backend
    spec:
      containers:
        - name: paytrack-backend
          image: noor2205/paytrack-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: paytrack
spec: 
  type: ClusterIP
  selector:
    app: paytrack-backend
  ports:
    - port: 8080
      targetPort: 8080
