k8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: paytrack-frontend
  namespace: paytrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paytrack-frontend
  template:
    metadata:
      labels:
        app: paytrack-frontend
    spec:
      containers:
        - name: paytrack-frontend
          image: noor2205/paytrack-frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: paytrack
spec:
  type: ClusterIP
  selector:
    app: paytrack-frontend
  ports:
    - port: 80
      targetPort: 80
