k8/frontned-deployment.yaml
apiVersion: v1
kind: Deployment
metadata: 
  name: paytrack-frontend
  namespace: paytrack
specs:
  replicas: 1
  selector:
    matchLabels:
      app: paytrack-frontend
    template:
      metadata:
        labels:
          app: paytrack-frontend
      spec:
        containers:
          - name: paytrack-frontend
            image: <usernameof dockerhub>/imahename
            ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: paytrack
spec:
  selector:
    app: paytrack-frontend
  ports:
    - port: 80
      targetPort: 80
