k8/mysql-deployment.yaml
apiVersion: v1  
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: paytrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.3
          volumeMounts:
            - name: initdb
              mountPath: D:\paytrack - devOps\PayTrack\mysql-init


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-pvc
  namespace: paytrack
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
